meja/tests/row-subtract-printing.stderr
File "tests/row-subtract-printing.meja", line 8, characters 19-25:
Error: Incompatible types
       ([>] as 'b) -> (([>] as 'b) -> [([>] as 'c) - `A])
       -> ([([>] as 'c) - `A] -> [([>] as 'c) - `A | `B])
       -> ([([>] as 'c) - `A | `B] -> [([>] as 'c) - `A | `B | `C])
       -> [([>] as 'b) - `A | `B] and
       ([>] as 'b) -> (([>] as 'b) -> [([>] as 'c) - `A])
       -> ([([>] as 'c) - `A] -> [([>] as 'c) - `A | `B])
       -> ([([>] as 'c) - `A | `B] -> [([>] as 'c) - `A | `B | `C])
       -> [([>] as 'c) - `A | `B | `C]:
       Cannot unify [([>] as 'b) - `A | `B] and [([>] as 'c) - `A | `B | `C]
